[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

# Format Python import statements
# https://github.com/psf/black/blob/master/docs/compatible_configs.md
[tool.isort]
profile = "black"  # Be compatible with the black formatter
multi_line_output = 3  # For black compatability

[project]
name = "conflook"
version = "0.1"
description = "Inspect ugly config files."
authors = [{name = "puqeko"}]
dependencies = [
    "click~=8.0",
    "tomlkit~=0.7",
    "pyyaml~=6.0",
]
requires-python = ">=3.9"
dynamic = ["version", "classifiers"]
readme = "README.md"
keywords = ["cli", "configuration", "inspect", "utility", "development"]
license = {text = "MIT"}
    [project.urls]
    # homepage = ""

[project.scripts]
conflook = "conflook:cli"


[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit~=2.15",
    "twine~=3.4",
]
